[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accountsdb-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "2.0.10"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = { version = "3.0.6" }
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
openssl = { version = "0.10" }
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
solana-account-decoder = { version = "3.0.6" }

solana-logger = { version = "3.0.0" }
solana-measure = { version = "3.0.6" }
solana-metrics = { version = "3.0.6" }
solana-runtime = { version = "3.0.6" }
solana-program = { version = "3.0.0" }
solana-zk-token-sdk = { version = "3.0.6" } 
solana-sdk = { version = "3.0.0" }
solana-transaction = { version = "3.0.0" }
solana-transaction-status = { version = "3.0.6" }


thiserror = "1.0.64"
tokio-postgres = "0.7.12"

[dev-dependencies]
agave-reserved-account-keys = { version = "3.0.6" }
libc = "0.2.112"
libloading = "0.7.2"
serial_test = "0.5.1"
solana-account-decoder = { version = "3.0.6" }
solana-core = { version = "3.0.6" }
solana-local-cluster = { version = "3.0.6" }
solana-net-utils = { version = "3.0.6" }
solana-rpc = { version = "3.0.6" }
solana-streamer = { version = "3.0.6" }
solana-system-transaction = { version = "3.0.0" }
tempfile = "3.13.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


#[patch.crates-io]
#curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }

#solana-curve25519 = { version = "3.0.6" }
#solana-program = { version = "3.0.6" }
#solana-zk-sdk = { version = "3.0.6" }
#solana-zk-token-sdk = { version = "3.0.6" }
